--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: temp
+name: fcalendar
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,16 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  table_calendar: 3.0.7
+  intl: 0.17.0
+  drift: 2.1.0
+  sqlite3_flutter_libs: 0.5.10
+  path_provider: 2.0.11
+  path: 1.9.0
+  get_it: 7.2.0
+  dio: 4.0.6
+  provider: 6.0.3
+  uuid: 3.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  drift_dev: 2.1.0
+  build_runner: 2.2.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
